wordpress/wordpress/web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wordpress
  labels:
    name: wordpress
spec:
  containers:
    - name: wordpress
      image: wordpress
      ports:                              
        - containerPort: 80
          protocol: TCP
