wordpress/wordpress/clientIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-svc
spec:
  selector:
    name: wordpress
  sessionAffinity: ClientIP
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 80
