wordpress/wordpress/wordpress-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-np-svc
spec:
  selector:
    name: wordpress
  type: NodePort
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 80
