wordpress/wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  rules:
   - host: localhost
     http:
       paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wp-np-svc
              port:
                number: 5001
